@@ -19,10 +19,7 @@ my @BSON = (
   qw(bson_false bson_length bson_max bson_min bson_oid bson_raw bson_time),
   qw(bson_true bson_ts)
 );
-our @EXPORT_OK = (
-  @BSON,
-  qw(decode_int32 decode_int64 encode_cstring encode_int32 encode_int64),
-);
+our @EXPORT_OK = (@BSON, 'encode_cstring');
 our %EXPORT_TAGS = (bson => \@BSON);
 
 # Types
@@ -90,12 +87,12 @@ sub bson_encode {
     map { _encode_value(encode_cstring($_), $doc->{$_}) } keys %$doc;
 
   # Document ends with null byte
-  return encode_int32(length($bson) + 5) . $bson . "\x00";
+  return pack('l<', length($bson) + 5) . $bson . "\x00";
 }
 
 sub bson_false {$FALSE}
 
-sub bson_length { length $_[0] < 4 ? undef : decode_int32(substr $_[0], 0, 4) }
+sub bson_length { length $_[0] < 4 ? undef : unpack 'l<', substr($_[0], 0, 4) }
 
 sub bson_max {$MAXKEY}
 
@@ -113,22 +110,16 @@ sub bson_ts {
 
 sub bson_true {$TRUE}
 
-sub decode_int32 { unpack 'l<', shift }
-sub decode_int64 { unpack 'q<', shift }
-
 sub encode_cstring {
   my $str = shift;
   utf8::encode $str;
   return pack 'Z*', $str;
 }
 
-sub encode_int32 { pack 'l<', shift }
-sub encode_int64 { pack 'q<', shift }
-
 sub _decode_binary {
   my $bsonref = shift;
 
-  my $len = decode_int32(substr $$bsonref, 0, 4, '');
+  my $len = unpack 'l<', substr($$bsonref, 0, 4, '');
   my $subtype = substr $$bsonref, 0, 1, '';
   my $binary = substr $$bsonref, 0, $len, '';
 
@@ -169,8 +160,8 @@ sub _decode_doc {
 sub _decode_string {
   my $bsonref = shift;
 
-  my $len = decode_int32(substr $$bsonref, 0, 4, '') - 1;
-  my $str = substr $$bsonref, 0, $len, '';
+  my $len = unpack 'l<', substr($$bsonref, 0, 4, '');
+  my $str = substr $$bsonref, 0, $len - 1, '';
   utf8::decode $str;
   substr $$bsonref, 0, 1, '';
 
@@ -189,8 +180,8 @@ sub _decode_value {
 
   # Double/Int32/Int64
   return unpack 'd<', substr $$bsonref, 0, 8, '' if $type eq DOUBLE;
-  return decode_int32(substr $$bsonref, 0, 4, '') if $type eq INT32;
-  return decode_int64(substr $$bsonref, 0, 8, '') if $type eq INT64;
+  return unpack 'l<', substr($$bsonref, 0, 4, '') if $type eq INT32;
+  return unpack 'q<', substr($$bsonref, 0, 8, '') if $type eq INT64;
 
   # Document
   return _decode_doc($bsonref) if $type eq DOCUMENT;
@@ -204,7 +195,7 @@ sub _decode_value {
   return undef if $type eq NULL;
 
   # Time
-  return bson_time(decode_int64(substr $$bsonref, 0, 8, ''))
+  return bson_time(unpack 'q<', substr($$bsonref, 0, 8, ''))
     if $type eq DATETIME;
 
   # Regex
@@ -222,13 +213,13 @@ sub _decode_value {
   # Code (with and without scope)
   return bson_code(_decode_string($bsonref)) if $type eq CODE;
   if ($type eq CODE_SCOPE) {
-    decode_int32(substr $$bsonref, 0, 4, '');
+    substr $$bsonref, 0, 4, '';
     return bson_code(_decode_string($bsonref))->scope(_decode_doc($bsonref));
   }
 
   # Timestamp
   return bson_ts(
-    reverse map({decode_int32(substr $$_, 0, 4, '')} $bsonref, $bsonref))
+    reverse map({unpack 'l<', substr($$_, 0, 4, '')} $bsonref, $bsonref))
     if $type eq TIMESTAMP;
 
   # Unknown
@@ -237,7 +228,7 @@ sub _decode_value {
 
 sub _encode_binary {
   my ($e, $subtype, $value) = @_;
-  return BINARY . $e . encode_int32(length $value) . $subtype . $value;
+  return BINARY . $e . pack('l<', length $value) . $subtype . $value;
 }
 
 sub _encode_object {
@@ -251,7 +242,7 @@ sub _encode_object {
   return BOOL . $e . ($value ? "\x01" : "\x00") if $class eq $BOOL;
 
   # Time
-  return DATETIME . $e . encode_int64($value) if $class eq 'Mango::BSON::Time';
+  return DATETIME . $e . pack('q<', $value) if $class eq 'Mango::BSON::Time';
 
   # Regex
   if ($class eq 'Regexp') {
@@ -277,7 +268,7 @@ sub _encode_object {
     # With scope
     if (my $scope = $value->scope) {
       my $code = _encode_string($value->code) . bson_encode($scope);
-      return CODE_SCOPE . $e . encode_int32(length $code) . $code;
+      return CODE_SCOPE . $e . pack('l<', length $code) . $code;
     }
 
     # Without scope
@@ -285,7 +276,7 @@ sub _encode_object {
   }
 
   # Timestamp
-  return join '', TIMESTAMP, $e, map { encode_int32 $_} $value->increment,
+  return join '', TIMESTAMP, $e, map { pack 'l<', $_ } $value->increment,
     $value->seconds
     if $class eq 'Mango::BSON::Timestamp';
 
@@ -301,7 +292,7 @@ sub _encode_object {
 sub _encode_string {
   my $str = shift;
   utf8::encode $str;
-  return encode_int32(length($str) + 1) . "$str\x00";
+  return pack('l<', length($str) + 1) . "$str\x00";
 }
 
 sub _encode_value {
@@ -349,11 +340,11 @@ sub _encode_value {
   if ($flags & B::SVp_IOK) {
 
     # Int32
-    return INT32 . $e . encode_int32($value)
+    return INT32 . $e . pack('l<', $value)
       if $value <= INT32_MAX && $value >= INT32_MIN;
 
     # Int64
-    return INT64 . $e . encode_int64($value);
+    return INT64 . $e . pack('q<', $value);
   }
 
   # String
@@ -529,35 +520,11 @@ Create new BSON element of the boolean type true.
 
 Create new BSON element of the timestamp type with L<Mango::BSON::Timestamp>.
 
-=head2 decode_int32
-
-  my $int32 = decode_int32 $bytes;
-
-Decode 32bit integer.
-
-=head2 decode_int64
-
-  my $int64 = decode_int64 $bytes;
-
-Decode 64bit integer.
-
 =head2 encode_cstring
 
   my $bytes = encode_cstring $cstring;
 
 Encode cstring.
-
-=head2 encode_int32
-
-  my $bytes = encode_int32 $int32;
-
-Encode 32bit integer.
-
-=head2 encode_int64
-
-  my $bytes = encode_int64 $int64;
-
-Encode 64bit integer.
 
 =head1 SEE ALSO
 
